home overflow fix

--- a/client/src/pages/Home/Home.css
+++ b/client/src/pages/Home/Home.css
@@ -6,7 +6,7 @@
   background-repeat: no-repeat;
   background-size: cover;
 } */
-*{
+.home{
   overflow-x: hidden;
 }
 .grid {
